[#157394547] Fixed header icon styles on mobile.

--- a/reactjs/components/atoms/Notifications/Popup/_styles.scss
+++ b/reactjs/components/atoms/Notifications/Popup/_styles.scss
@@ -13,8 +13,8 @@
     height: 500px;
     border-radius: 2px;
     left: initial;
-    top: 61px;
-    right: -10px;
+    top: 80px;
+    right: 0;
     position: absolute;
   }
 
